--- a/package.json
+++ b/package.json
@@ -160,7 +160,7 @@
       "cordova-plugin-badge": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-customurlscheme": {
-        "URL_SCHEME": "moodlemobile"
+        "URL_SCHEME": "http://ambiente-teste.speakonyep.com/"
       },
       "cordova-plugin-device": {},
       "cordova-plugin-file": {},
