--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
-    "app_id": "com.moodle.moodlemobile",
-    "appname": "Moodle Mobile",
+    "app_id": "br.com.fabianeprado.mobileapp",
+    "appname": "Fabiane Prado",
     "desktopappname": "Moodle Desktop",
     "versioncode": 3820,
     "versionname": "3.8.2",
@@ -61,12 +61,12 @@
     "wsextservice": "local_mobile",
     "demo_sites": {
         "student": {
-            "url": "https:\/\/school.moodledemo.net",
+            "url": "",
             "username": "student",
             "password": "moodle"
         },
         "teacher": {
-            "url": "https:\/\/school.moodledemo.net",
+            "url": "",
             "username": "teacher",
             "password": "moodle"
         }
@@ -77,12 +77,12 @@
         93.75
     ],
     "customurlscheme": "moodlemobile",
-    "siteurl": "",
-    "sitename": "",
+    "siteurl": "http://ambiente-teste.speakonyep.com",
+    "sitename": "Fabiane Prado",
     "multisitesdisplay": "",
     "skipssoconfirmation": false,
     "forcedefaultlanguage": false,
-    "privacypolicy": "https:\/\/moodle.net\/moodle-app-privacy\/",
+    "privacypolicy": "",
     "notificoncolor": "#f98012",
     "statusbarbg": false,
     "statusbarlighttext": false,
